src/test/kalang-snippets/error/ExtraneousToken.kls
extraneous input 'package'@1
package myname;